section categorie started

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 html,
 body {
   height: 100%;
+  background-image: url("https://advertisingpol.wpengine.com/wp-content/uploads/2023/04/jula_logo_main_rgb.svg");
 }
 
 html {
@@ -56,36 +57,11 @@ table {
   flex-direction: row;
   justify-content: flex-end;
 }
-.navi .wrapper h1 .rebrandedO {
+.navi .wrapper .headerLogo {
   position: absolute;
-  left: 0;
-  top: 0;
-  transform: translate(12px, 15px);
-  content: "";
-  border-radius: 50%;
-  width: 10px;
-  height: 10px;
-  box-shadow: 0 0 0 12px #24e5db;
+  background-image: url("https://a.allegroimg.com/original/1e77d5/f7d4366341238ae84c66a7ede960");
 }
-.navi .wrapper h1 .rebrandedL {
-  position: absolute;
-  left: 37px;
-  top: 0;
-  width: 10px;
-  bottom: 0;
-  background: #23e5db;
-}
-.navi .wrapper h1 .rebrandedX {
-  width: 20px;
-  height: 20px;
-  overflow: hidden;
-  display: block;
-  position: absolute;
-  left: 42px;
-  top: 0;
-  transform: translate(51px, 10px);
-}
-.navi .wrapper ul > li {
+.navi ul > li {
   display: block;
   float: left;
   margin: 20px;
