--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@
 html,
 body {
   height: 100%;
-  background-image: url("https://advertisingpol.wpengine.com/wp-content/uploads/2023/04/jula_logo_main_rgb.svg");
 }
 
 html {
@@ -48,22 +47,56 @@ table {
 
 .navi {
   position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 7.2rem;
   background-color: #002f34;
   padding: 0 2.4rem;
   font-size: 1.6rem;
 }
 .navi .wrapper {
+  position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-evenly;
+  align-items: center;
+  top: 1rem;
 }
 .navi .wrapper .headerLogo {
   position: absolute;
-  background-image: url("https://a.allegroimg.com/original/1e77d5/f7d4366341238ae84c66a7ede960");
+  top: -1rem;
+  left: 1.6rem;
+  width: 7.2rem;
 }
-.navi ul > li {
-  display: block;
-  float: left;
-  margin: 20px;
+.navi .wrapper .userBox {
+  position: relative;
+  left: 5rem;
+  right: 0;
+  display: flex;
+  flex-direction: row;
   list-style: none;
+  justify-content: center;
+}
+.navi .wrapper .userBox .fa-regular {
+  margin: 2rem 0rem 2rem 2rem;
+  color: white;
+}
+.navi .wrapper .userBox span {
+  margin: 2rem;
+  color: white;
+}
+.navi .wrapper .addNewPost {
+  position: relative;
+  width: 17rem;
+  height: 4.6rem;
+  color: black;
+  background-color: white;
+  border-radius: 4px;
+}
+.navi .wrapper .addNewPost span {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translate(10%, -50%);
 }/*# sourceMappingURL=main.css.map */
