--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 html,
 body {
     height: 100%;
-    background-image: url('https://advertisingpol.wpengine.com/wp-content/uploads/2023/04/jula_logo_main_rgb.svg');
+    
 }
  
 html {
@@ -48,28 +48,67 @@ table {
 }
 .navi {
     position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 7.2rem;
     background-color: #002f34;
     padding: 0 2.4rem;
     font-size: 1.6rem;
     .wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
+       position: relative;
+       display: flex;
+       flex-direction: row;
+       justify-content: space-evenly;
+       align-items: center;
+       top: 1rem;
         .headerLogo {
             position: absolute;
-            background-image: url('https://a.allegroimg.com/original/1e77d5/f7d4366341238ae84c66a7ede960');
-            
-        }
-        }
-        ul > li {
-            display: block;
-            
-            float:left;
-            margin: 20px;
+            top: -1rem;
+            left: 1.6rem;
+            width: 7.2rem;
+            }
+        .userBox {
+            position: relative;
+            left: 5rem;
+            right: 0;
+            display: flex;
+            flex-direction: row;
             list-style: none;
-
-
-          }
+            justify-content: center ;
+            
+            
+            .fa-regular {
+                margin: 2rem 0rem 2rem 2rem;
+            color: white;
+            
         }
+        span {
+            margin: 2rem;
+            color: white;
+        }
+    }
+    .addNewPost {
+        position: relative;
+        width: 17rem;
+        height: 4.6rem;
+        color: black;
+        background-color: white;
+        border-radius: 4px;
+        span {
+            position: absolute;
+            top: 50%;
+            left: 10%, ;
+            transform: translate(10%,-50%);
+
+        }
+    }
+    }
+     
+    
+    
+    
+        
         
     
+}
