--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 
 html {
   font-size: 62.5%;
+  font-family: Montserrat, sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -62,6 +63,7 @@ table {
   justify-content: space-evenly;
   align-items: center;
   top: 1rem;
+  font-weight: bold;
 }
 .navi .wrapper .headerLogo {
   position: absolute;
@@ -82,9 +84,15 @@ table {
   margin: 2rem 0rem 2rem 2rem;
   color: white;
 }
+.navi .wrapper .userBox .fa-heart {
+  margin: 2rem;
+}
 .navi .wrapper .userBox span {
   margin: 2rem;
   color: white;
+}
+.navi .wrapper .userBox .navBox:hover {
+  color: red;
 }
 .navi .wrapper .addNewPost {
   position: relative;
@@ -97,6 +105,6 @@ table {
 .navi .wrapper .addNewPost span {
   position: absolute;
   top: 50%;
-  left: 10%;
-  transform: translate(10%, -50%);
+  left: 0%;
+  transform: translate(8%, -50%);
 }/*# sourceMappingURL=main.css.map */
