--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@ body {
  
 html {
     font-size: 62.5%;
+    font-family: Montserrat, sans-serif;
     scroll-behavior: smooth;
 }
  
@@ -56,18 +57,19 @@ table {
     padding: 0 2.4rem;
     font-size: 1.6rem;
     .wrapper {
-       position: relative;
-       display: flex;
-       flex-direction: row;
-       justify-content: space-evenly;
-       align-items: center;
-       top: 1rem;
-        .headerLogo {
-            position: absolute;
-            top: -1rem;
-            left: 1.6rem;
-            width: 7.2rem;
-            }
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        top: 1rem;
+        font-weight: bold;
+       .headerLogo {
+           position: absolute;
+           top: -1rem;
+           left: 1.6rem;
+           width: 7.2rem;
+        }
         .userBox {
             position: relative;
             left: 5rem;
@@ -75,33 +77,44 @@ table {
             display: flex;
             flex-direction: row;
             list-style: none;
-            justify-content: center ;
+            justify-content: center;
             
             
             .fa-regular {
                 margin: 2rem 0rem 2rem 2rem;
-            color: white;
-            
+                color: white;
+            }
+            .fa-heart {
+                margin: 2rem;
+            }
+            span {
+                margin: 2rem;
+                color: white;
+            }
         }
-        span {
-            margin: 2rem;
-            color: white;
+        .userBox .navBox:hover {
+            color: red;
         }
-    }
-    .addNewPost {
-        position: relative;
-        width: 17rem;
-        height: 4.6rem;
-        color: black;
-        background-color: white;
-        border-radius: 4px;
-        span {
-            position: absolute;
-            top: 50%;
-            left: 10%, ;
-            transform: translate(10%,-50%);
 
+        .addNewPost {
+            position: relative;
+            width: 17rem;
+            height: 4.6rem;
+            color: black;
+            background-color: white;
+            border-radius: 4px;
+            span {
+                position: absolute;
+                top: 50%;
+                left: 0%, ;
+                transform: translate(8%,-50%);
         }
+        // .addNewPost:hover {
+            
+        //         color: white;
+        //         background-color: black;
+            
+        // }
     }
     }
      
