added hover and some style fixed

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 
 html {
   font-size: 62.5%;
-  font-family: Montserrat, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -60,20 +60,21 @@ table {
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: center;
+  width: 1080px;
   top: 1rem;
   font-weight: bold;
 }
 .navi .wrapper .headerLogo {
   position: absolute;
   top: -1rem;
-  left: 1.6rem;
+  left: 15rem;
   width: 7.2rem;
 }
 .navi .wrapper .userBox {
   position: relative;
-  left: 5rem;
+  left: 0;
   right: 0;
   display: flex;
   flex-direction: row;
@@ -91,10 +92,10 @@ table {
   margin: 2rem;
   color: white;
 }
-.navi .wrapper .userBox .navBox:hover {
-  color: red;
+.navi .wrapper .userBox a:hover i, .navi .wrapper .userBox a:hover span {
+  color: #7f9799;
 }
-.navi .wrapper .addNewPost {
+.navi .addNewPost {
   position: relative;
   width: 17rem;
   height: 4.6rem;
@@ -102,9 +103,16 @@ table {
   background-color: white;
   border-radius: 4px;
 }
-.navi .wrapper .addNewPost span {
+.navi .addNewPost span {
   position: absolute;
   top: 50%;
-  left: 0%;
-  transform: translate(8%, -50%);
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  transition: background-color 1s;
+}
+.navi .addNewPost .trySomething:hover {
+  color: white;
+  background-color: black;
+  padding: 7px;
 }/*# sourceMappingURL=main.css.map */
