--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@ body {
  
 html {
     font-size: 62.5%;
-    font-family: Montserrat, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; 
     scroll-behavior: smooth;
 }
  
@@ -49,6 +49,7 @@ table {
 }
 .navi {
     position: relative;
+    
     top: 0;
     left: 0;
     right: 0;
@@ -60,19 +61,20 @@ table {
         position: relative;
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: flex-end;
         align-items: center;
+        width: 1080px;
         top: 1rem;
         font-weight: bold;
        .headerLogo {
            position: absolute;
            top: -1rem;
-           left: 1.6rem;
+           left: 15rem;
            width: 7.2rem;
         }
         .userBox {
             position: relative;
-            left: 5rem;
+            left: 0;
             right: 0;
             display: flex;
             flex-direction: row;
@@ -91,9 +93,10 @@ table {
                 margin: 2rem;
                 color: white;
             }
+            a:hover i, a:hover span{
+                color: #7f9799;
+            }
         }
-        .userBox .navBox:hover {
-            color: red;
         }
 
         .addNewPost {
@@ -106,15 +109,19 @@ table {
             span {
                 position: absolute;
                 top: 50%;
-                left: 0%, ;
-                transform: translate(8%,-50%);
-        }
-        // .addNewPost:hover {
-            
-        //         color: white;
-        //         background-color: black;
-            
-        // }
+                left: 50%;
+                margin-right: -50%;
+                transform: translate(-50%, -50%);
+                transition: background-color 1s;
+            }
+            .trySomething:hover {
+                
+                    color: white;
+                    background-color: black;
+                    padding: 7px;
+                    
+
+            }
     }
     }
      
@@ -124,4 +131,3 @@ table {
         
         
     
-}
